<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#313338"
    tools:context=".view.fragments.LoginFragment">

    <LinearLayout
        android:id="@+id/login_fragment_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_fragment_email_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Введите ваш email:"
            android:textColor="#BFBFBF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/login_fragment_login_input"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_background"
            android:hint="Почта"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login_fragment_password_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Введите ваш пароль:"
            android:textColor="#BFBFBF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/login_fragment_password_input"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_background"
            android:hint="Пароль"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login_fragment_login_button"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:backgroundTint="#4FB3BF"
            android:text="Войти" />

        <TextView
            android:id="@+id/login_fragment_registration_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="Еще не зарегистрированы?"
            android:textColor="#BFBFBF"
            android:textSize="16sp"
            android:focusable="true" />

        <ProgressBar
            android:id="@+id/login_fragment_registration_login_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:visibility="invisible" />

    </LinearLayout>

</FrameLayout>