...
        tools:layout="@layout/fragment_login_page" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_userPageFragment"
            app:destination="@id/userPageFragment" />
        <action
            android:id="@+id/action_loginFragment_to_moderatorPageFragment"
            app:destination="@id/moderatorPageFragment" />
        <action
            android:id="@+id/action_loginFragment_to_organizerPageFragment"
            app:destination="@id/organizerPageFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
...
